--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
     <nav>
         <ul>
             <!-- Home -->
-            <li><a href="#Home">Home</a></li>
+            <li><a href="#home">Home</a></li>
 
             <!-- About -->
             <li><a href="#Abt">About</a></li>
 
             <!-- Education -->
-            <li><a href="#Edu">Education</a></li>
+            <li><a href="#edu">Education</a></li>
 
             <!-- Skills -->
-            <li><a href="#Skill">Skills</a></li>
+            <li><a href="#skill">Skills</a></li>
 
             <!-- Accomplishments -->
-            <li><a href="#Awards">Accomplishments</a></li>
+            <li><a href="#awards">Accomplishments</a></li>
 
             <!-- Projects -->
-            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
 
             <!-- Contact Details -->
-            <li><a href="#Con">Contact Me</a></li>
+            <li><a href="#con">Contact Me</a></li>
         </ul>
     </nav>
 
     <!-- Home -->
-    <header id="Home">
+    <header id="home">
         <div class="header-state">
             <h1>Khanyiso Haman</h1>
         <h2>|Junior Web Developer|</h2>
@@ -49,7 +49,7 @@
 
 
         <!-- About -->
-        <section id="Abt">
+        <section id="abt">
                 <article class="paragraph">
                     <p>I am a young, vibrant and multilingual individual with an extensive amount of self-confidence and charisma. Well known for my leadership skills and kind nature, with the ability to not only multitask but work with a diverse group of people.</p>
                     <p>I am... Khanyiso Haman</p>
@@ -58,7 +58,7 @@
 
 
         <!-- Education -->
-        <section id="Edu">
+        <section id="edu">
             <article class="edu">
                 <img src="images/edu.png" alt="" width="200px" height="170px">
                     <h4>Action Volunteers Africa (Stellenbosch University) [Feb 2018 - Nov 2018]</h4>
@@ -80,7 +80,7 @@
 
 
         <!-- Skills -->
-        <section id="Skill">
+        <section id="skill">
             <article class="skill">
                     <h1>Skills</h1>
                     <img class="image" src="images/skills.jpg" alt="Skills" width="150px" height="100px">
@@ -112,7 +112,7 @@
 
 
         <!-- Accomplishments -->
-        <section id="Awards">
+        <section id="awards">
                 <h1>Achievements & Certificates</h1>
                 <!-- <img class="image" src="images/Accomplishment.png" alt="Achievements" width="300px" height="200px"> -->
 
@@ -137,21 +137,21 @@
         </section>
 
         <!-- Projects -->
-        <section id="Projects">
+        <section id="projects">
             <h1>My Projects</h1>
             <article class="project">
-                <div class="project-grid"><img src="images/gifs/200w.gif" alt=""></div>
-                <div class="project-grid"><img src="images/gifs/200w.gif" alt=""></div>
-                <div class="project-grid"><img src="images/gifs/200w.gif" alt=""></div>
-                <div class="project-grid"><img src="images/gifs/200w.gif" alt=""></div>
-                <div class="project-grid"><img src="images/gifs/200w.gif" alt=""></div>
-                <div class="project-grid"><img src="images/gifs/200w.gif" alt=""></div>
+                <div class="project-grid"><p>&nbsp;</p></div>
+                <div class="project-grid"><p>&nbsp;</p></div>
+                <div class="project-grid"><p>&nbsp;</p></div>
+                <div class="project-grid"><p>&nbsp;</p>></div>
+                <div class="project-grid"><p>&nbsp;</p></div>
+                <div class="project-grid"><p>&nbsp;</p></div>
             </article>
         </section>
 
 
     <!-- Contact Details -->
-    <footer id="Con">
+    <footer id="con">
 
         <article class="con">
 
