--- a/index.html
+++ b/index.html
@@ -158,10 +158,33 @@
         </section>
 
         <section class="projects">
-            <article class="outdoor project-item"></article>
-            <article class="vr-game project-item"></article>
-            <article class="handmade project-item"></article>
-            <article class="talkspace project-item"></article>
+            <h1 class="project-h1">Projects</h1>
+            <article class="outdoor project-item"> <img src="images/projects/outdoor.PNG" alt=""> <div class="ipsum"><p>Outdoor Adventures</p></div></article>
+            <article class="vr-game project-item"> <img src="images/projects/vrgame.PNG" alt=""> <div class="ipsum"><p>Virtual Reality Game</p></div></article>
+            <article class="handmade project-item"> <img src="images/projects/handmade-shop.PNG" alt=""> <div class="ipsum"><p>Handmade Shop</p></div></article>
+            <article class="talkspace project-item"> <img src="images/projects/talkspace-blog.PNG" alt=""> <div class="ipsum"><p>Talk Space Blog</p></div></article>
+        </section>
+
+        <section class="interests">
+            <h1 class="interest-h1">WHAT INTERESTS ME?</h1>
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2018/05/09/07/47/skywatch-3384730_1280.jpg" alt=""> <div class="lorem"><p>Astrophysics</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2018/04/16/15/52/chess-3325010_1280.jpg" alt=""> <div class="lorem"><p>Chess</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2017/10/27/20/25/leopard-2895448_1280.jpg" alt=""> <div class="lorem"><p>Leopards</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2015/12/08/00/27/cabin-1081733_1280.jpg" alt=""> <div class="lorem"><p>Cabins in Forests</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2016/11/19/14/00/code-1839406_1280.jpg" alt=""> <div class="lorem"><p>Technology & Coding</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2017/09/04/09/38/cross-2713356_1280.jpg" alt=""> <div class="lorem"><p>Faith</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2014/12/16/22/25/youth-570881_1280.jpg" alt=""> <div class="lorem"><p>Having Fun</p></div></article>
+
+            <article class="interest-item"> <img src="https://cdn.pixabay.com/photo/2016/11/30/16/20/hip-hop-1873203_1280.jpg" alt=""> <div class="lorem"><p>Dancing</p></div></article>
+
+            <article class="interest-item"> <img src="https://stmed.net/sites/default/files/the-originals-wallpapers-31723-878043.jpg" alt=""> <div class="lorem"><p>Movies & Series</p></div></article>
+
         </section>
 
     </div>
