--- a/index.html
+++ b/index.html
@@ -187,6 +187,24 @@
 
         </section>
 
+        <footer>
+            <h1 class="footer-h1">This is my Footer</h1>
+
+            <h3>Contact Khanyiso Haman</h3>
+
+            <div class="icons">
+                <span class="icon-item"> <a href="#"><i class="fab fa-facebook-f"></i></a> </span>
+                <span class="icon-item"> <a href="#"><i class="fab fa-twitter"></i></a> </span>
+                <span class="icon-item"> <a href="#"><i class="fab fa-github"></i> </a></span>
+                <span class="icon-item"> <a href="#"><i class="fab fa-linkedin-in"></i></a> </span>
+            </div>
+            <article class="footer">
+                 <p> Designed by Khanyiso Haman &copy; 2019 </p>
+                 <hr> 
+                 <p>  Dr. West, Legend of Legends </p>
+            </article>
+        </footer>
+        
     </div>
     <!-- MY CONTAINER ENDS -->
     
