--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 <!-- Creativity is intelligence having fun -Albert Einstein -->
 
-                <a class="arrow-down" href="#"><i class="fas fa-chevron-down arrow-down"></i>       </a>
+                <a class="arrow-down" href="#about"><i class="fas fa-chevron-down arrow-down"></i>       </a>
 
             </article>
 
