--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
             <h3>Contact Khanyiso Haman</h3>
 
-            <a class="download" href="Khanyiso_Dr West_Haman.pdf">DOWNLOAD CV</a>
+            <a class="download" href="Khanyiso Haman Junior Web Dev.pdf">DOWNLOAD CV</a>
 
             <!-- BootStrap -->
             <p class="bootstrap">
@@ -265,7 +265,7 @@
 
                 <span class="icon-item"> <a target="_blank" href="https://github.com/KhanyisoHaman"><i class="fab fa-github-square"></i> </a></span>
 
-                <span class="icon-item"> <a target="_blank" href="https://www.linkedin.com"><i class="fab fa-linkedin"></i> </a> </span>
+                <span class="icon-item"> <a target="_blank" href="https://www.linkedin.com/in/khanyiso-haman-459ab716a/"><i class="fab fa-linkedin"></i> </a> </span>
             </div>
             <article class="footer">
                  <p> Designed by Khanyiso Haman &copy; 2019 </p>
