--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
         <!-- Back To Top Button  -->
         <a id="button" class="back-top-btn" href="#"><i class="fas fa-chevron-up"></i></a>
 
+        <!-- Me -->
         <section id="about" class="about-me">
+            <!-- Who am I -->
             <h1 class="about-h1" >ABOUT ME</h1>
 
             <article class="about-image"></article>
@@ -115,8 +117,17 @@
             </article>
         </section>
 
+        <!-- My Education -->
         <section id="education" class="education">
             <h1 class="edu-h1">EDUCATION</h1>
+            <!-- Delft Technical High -->
+            <article class="edu-item">
+                <h3 class = "h3">Delft Technical High School</h3>
+                <h4 class = "h4">National Senior Certificate</h4>
+                <h5 class = "h5">2013 - 2017</h5>
+            </article>
+
+            <!-- Stellenbosch -->
             <article class="edu-item">
                 <h3 class = "h3">Action Volunteers Africa</h3>
                 <h3 class = "h3">(Stellenbosch University)</h3>
@@ -124,6 +135,7 @@
                 <h5 class = "h5">Feb - Nov 2018</h5>
             </article>
 
+            <!-- Astar Project -->
             <article class="edu-item">
                 <h3 class = "h3">Action Volunteers Africa</h3>
                 <h3 class = "h3">(The Astar Project)</h3>
@@ -131,12 +143,7 @@
                 <h5 class = "h5">Feb - Nov 2018</h5>
             </article>
 
-            <article class="edu-item">
-                <h3 class = "h3">Delft Technical High School</h3>
-                <h4 class = "h4">National Senior Certificate</h4>
-                <h5 class = "h5">2013 - 2017</h5>
-            </article>
-            <!-- Langauges -->
+            <!-- Life Choices Academy -->
             <article class="edu-item">
                 <h3 class = "h3">Life Choices Academy</h3>
                 <h4 class = "h4">Web Development Course</h4>
@@ -144,6 +151,7 @@
             </article>
         </section>
 
+        <!-- My Skills -->
         <section id="skills" class="skills">
             <h1 class="skills-h1">SKILLS & COMPETENCIES</h1>
 
@@ -166,6 +174,7 @@
             </article>
         </section>
 
+        <!-- My Accomplishments -->
         <section id="accomplishments" class="accomplishments">
             <h1 class="accom-h1">Accomplishments</h1>
 
@@ -196,6 +205,7 @@
             </article>
         </section>
 
+        <!-- My Projects -->
         <section id="projects" class="projects">
             <h1 class="project-h1">Projects</h1>
             <article class="outdoor project-item"> <img src="images/projects/outdoor.PNG" alt=""> <a href="https://khanyisohaman.github.io/outdoor-adventures/"><div class="ipsum"><p>Outdoor Adventures</p></div></a></article>
@@ -204,6 +214,7 @@
             <article class="talkspace project-item"> <img src="images/projects/talkspace-blog.PNG" alt=""> <a href="http://talkspace-blog-example-blog.1d35.starter-us-east-1.openshiftapps.com/"><div class="ipsum"><p>Talk Space Blog</p></div></a></article>
         </section>
 
+        <!-- My Interests -->
         <section class="interests">
             <h1 class="interest-h1">WHAT INTERESTS ME?</h1>
             <article class="interest-item"> <img src="https://physicalsciences.leeds.ac.uk/images/astrophysics_research_university_of_leeds_school_of_physics_and_astronomy_800x400.jpg" alt=""> <div class="lorem"><p>Astrophysics</p></div></article>
@@ -226,6 +237,7 @@
 
         </section>
 
+        <!-- My Contacts -->
         <footer id="contact">
             <h1 class="footer-h1">Dr West, Legend of Legends [L.O.L]</h1>
 
