--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Resume</title>
+    <title>Khanyiso Haman|Junior Web Dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Link My CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
